# de-zoomcamp-project

./: README.md  orchestrate.sh  pyproject.toml
.github/: build.yml
dbt/: Dockerfile  README.md  docker-compose.yaml
dbt/dbt/wojtek_deproject/: dbt_project.yml
dbt/dbt/wojtek_deproject/models/: by_conference.sql  dl_framework_counts.sql  monthly_paper_with_repo_ratio.sql  repo_actions.sql  schema.yml  top_github_paper_publishers.sql  top_libs_in_research.sql
ingest/: example_paper.json  gcp_ingest.py  gha_to_bq.py  paper_repo_deps.py  papers_to_bq.py  papers_to_gcs.py  pyspark_setup.sh
ingest/blocks/: make_gcp_blocks.py
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/.terraform/: terraform.tfstate
