[tool.poetry]
name = "de-zoomcamp-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "de_zoomcamp_project"}]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.4.5"
dbt-bigquery = "^1.4.3"
pyspark = "^3.3.2"
pytest = "^7.2.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
